Fix spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
   --large: 75rem;
   --spacer: 1rem;
   --spacer-double: 2rem;
-  --spacer-triple: 2rem;
+  --spacer-triple: 3rem;
   --layout-gap: var(--spacer);
   --input-padding: 0.75rem 1rem;
   --border-width: 0.0625rem;
