--- a/src/components/InstrumentSelector/InstrumentPicker.module.css
+++ b/src/components/InstrumentSelector/InstrumentPicker.module.css
@@ -15,13 +15,13 @@
   animation: fadein 0.3s linear forwards;
 }
 
-@keyframes fadein{
-  0%{
-    opacity:0;
+@keyframes fadein {
+  0% {
+    opacity: 0;
   }
 
-  100%{
-    opacity:1;
+  100% {
+    opacity: 1;
   }
 }
 
@@ -43,6 +43,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  gap: 0.25rem;
 }
 
 .close {
@@ -98,7 +99,7 @@
   color: var(--default-light);
   cursor: pointer;
   inline-size: 100%;
-  padding: 0.25rem;
+  padding: 1rem 0.25rem;
   text-align: center;
 
   &:hover {
